# cognitive-crew-redhat-hackathon-2025

./: Dockerfile  README.md  pyproject.toml  requirements.txt
app/config/: app_config.py
app/data/: db_writer.py
app/file_path/: Opportunity Product Data.csv
app/logger/: logger.py
app/models/: model.py
