[tool.poetry]
name = "redhat-hackathon-2025"
version = "0.1.0"
description = ""
authors = ["Shamadeb <shamaita.deb@maersk.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.41"
pandas = "^2.3.0"
pgvector = "^0.4.1"
config = "^0.5.1"
uvicorn = "^0.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
